# FRAT-NIGHT

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  README.md  dialogueScript  quickTimeEvent.cpp  quickTimeEvent.h
.github/workflows/: main.yml
header/: DialogueTree.hpp  SaveAndLoadData.hpp  dialogueTree.hpp  interfaceTerminal.hpp  npcClass.hpp  player.hpp  quickTimeEvent.hpp  scene.hpp
lib/: CMakeLists.txt  DialogueTree.cpp  FRAT NIGHT SCRIPT.txt  SaveAndLoadData.cpp  dialogueTree.cpp  interfaceTerminal.cpp  interfaceTerminal.hpp  main.cpp  npcClass.cpp  player.cpp  quickTimeEvent.cpp  scene.cpp  testingUI.cpp
src/: interfaceTerminal.cpp  main.cpp
test/: CMakeLists.txt  failingTests.cpp  passingTests.cpp
websiteCode/: websiteDraft1.md  websiteDraft2.css  websiteDraft2.html
